--- a/pandas/countries_df.ipynb
+++ b/pandas/countries_df.ipynb
@@ -67,6 +67,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>population</th>\n",
+       "      <th>area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>China</td>\n",
+       "      <td>1377422166</td>\n",
+       "      <td>9640011.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>India</td>\n",
+       "      <td>1295210000</td>\n",
+       "      <td>3287590.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>323947000</td>\n",
+       "      <td>9629091.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>258705000</td>\n",
+       "      <td>1904569.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>206135893</td>\n",
+       "      <td>8515767.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>194125062</td>\n",
+       "      <td>881912.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>186988000</td>\n",
+       "      <td>923768.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>161006790</td>\n",
+       "      <td>147570.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>Russian Federation</td>\n",
+       "      <td>146599183</td>\n",
+       "      <td>17124442.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>126960000</td>\n",
+       "      <td>377930.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         name  population        area\n",
+       "48                      China  1377422166   9640011.0\n",
+       "104                     India  1295210000   3287590.0\n",
+       "239  United States of America   323947000   9629091.0\n",
+       "105                 Indonesia   258705000   1904569.0\n",
+       "31                     Brazil   206135893   8515767.0\n",
+       "169                  Pakistan   194125062    881912.0\n",
+       "162                   Nigeria   186988000    923768.0\n",
+       "18                 Bangladesh   161006790    147570.0\n",
+       "185        Russian Federation   146599183  17124442.0\n",
+       "114                     Japan   126960000    377930.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.nlargest(10,'population')[['name','population','area']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
