--- a/pandas/marks_df.ipynb
+++ b/pandas/marks_df.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "Index(['name', 'subject', 'marks'], dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "       ['Steve', 'Python', 94.0]], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "max    98.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "max       NaN     NaN  98.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        " Index(['name', 'subject', 'marks'], dtype='object')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "Name: subject, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "9    Steve   94.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "6  Roberts  Python   70.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "Name: marks, dtype: bool"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "9    Steve  Python   94.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Henry'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[8,'name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1026,7 @@
        "9    Steve   94.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1089,7 @@
        "9  Steve  Python   94.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1173,7 @@
        "4  Roberts    HTML   98.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1251,7 @@
        "5  Roberts    Java"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1341,7 @@
        "9  Python   94.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1401,7 @@
        "1  Bill  Python"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1430,22 +1450,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Steve</td>\n",
+       "      <td>C</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>Steve</td>\n",
        "      <td>Python</td>\n",
-       "      <td>94.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Roberts</td>\n",
-       "      <td>Java</td>\n",
-       "      <td>60.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Roberts</td>\n",
-       "      <td>HTML</td>\n",
-       "      <td>98.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Bill</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>95.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1464,15 +1484,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      name subject  marks\n",
-       "9    Steve  Python   94.0\n",
-       "5  Roberts    Java   60.0\n",
-       "4  Roberts    HTML   98.0\n",
-       "0     Bill    Java   90.0\n",
-       "8    Henry     NaN   60.0"
+       "    name subject  marks\n",
+       "3  Steve       C   90.0\n",
+       "7  Steve  Python    NaN\n",
+       "1   Bill  Python   95.0\n",
+       "0   Bill    Java   90.0\n",
+       "8  Henry     NaN   60.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1522,7 @@
        "Name: subject, dtype: bool"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1620,7 @@
        "9    Steve  Python   94.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1740,7 @@
        "9    Steve  Python   94.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1731,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1756,85 +1776,74 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>subject</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Bill</td>\n",
-       "      <td>Java</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Bill</td>\n",
-       "      <td>Python</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Steve</td>\n",
-       "      <td>Java</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Steve</td>\n",
-       "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Roberts</td>\n",
-       "      <td>HTML</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Roberts</td>\n",
-       "      <td>Java</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Roberts</td>\n",
-       "      <td>Python</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Steve</td>\n",
-       "      <td>Python</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Henry</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Steve</td>\n",
-       "      <td>Python</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name subject\n",
-       "0     Bill    Java\n",
-       "1     Bill  Python\n",
-       "2    Steve    Java\n",
-       "3    Steve       C\n",
-       "4  Roberts    HTML\n",
-       "5  Roberts    Java\n",
-       "6  Roberts  Python\n",
-       "7    Steve  Python\n",
-       "8    Henry     NaN\n",
-       "9    Steve  Python"
+       "      name\n",
+       "0     Bill\n",
+       "1     Bill\n",
+       "2    Steve\n",
+       "3    Steve\n",
+       "4  Roberts\n",
+       "5  Roberts\n",
+       "6  Roberts\n",
+       "7    Steve\n",
+       "8    Henry\n",
+       "9    Steve"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.filter(like='e')  # select columns where column name contains letter e"
+    "df.filter(regex='e$')  # select columns where column name ends with letter e"
    ]
   },
   {
@@ -1846,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1874,7 @@
        "Name: marks, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1883,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1958,7 @@
        "0     Bill    Java   90.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2254,22 +2263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Java', 'Python', 'C', 'HTML', nan], dtype=object)"
+       "array(['Java', 'Python', 'C', 'HTML'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['subject'].unique()"
+    "df.subject.dropna().unique()"
    ]
   },
   {
@@ -2281,10 +2290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# s is a series \n",
     "def count_nulls(s):\n",
     "    return s.isnull().sum()"
    ]
@@ -2314,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2326,7 +2336,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2418,7 +2428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2426,12 +2436,12 @@
     "    if isinstance(v,str):\n",
     "        return v.strip().upper()\n",
     "    else:\n",
-    "        return 'UNKNOWN'"
+    "        return str(v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2457,6 +2467,7 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>subject</th>\n",
+       "      <th>marks</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2464,82 +2475,92 @@
        "      <th>0</th>\n",
        "      <td>BILL</td>\n",
        "      <td>JAVA</td>\n",
+       "      <td>90.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BILL</td>\n",
        "      <td>PYTHON</td>\n",
+       "      <td>95.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>STEVE</td>\n",
        "      <td>JAVA</td>\n",
+       "      <td>80.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>STEVE</td>\n",
        "      <td>C</td>\n",
+       "      <td>90.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ROBERTS</td>\n",
        "      <td>HTML</td>\n",
+       "      <td>98.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>ROBERTS</td>\n",
        "      <td>JAVA</td>\n",
+       "      <td>60.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>ROBERTS</td>\n",
        "      <td>PYTHON</td>\n",
+       "      <td>70.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>STEVE</td>\n",
        "      <td>PYTHON</td>\n",
+       "      <td>nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>HENRY</td>\n",
-       "      <td>UNKNOWN</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>60.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>STEVE</td>\n",
        "      <td>PYTHON</td>\n",
+       "      <td>94.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name  subject\n",
-       "0     BILL     JAVA\n",
-       "1     BILL   PYTHON\n",
-       "2    STEVE     JAVA\n",
-       "3    STEVE        C\n",
-       "4  ROBERTS     HTML\n",
-       "5  ROBERTS     JAVA\n",
-       "6  ROBERTS   PYTHON\n",
-       "7    STEVE   PYTHON\n",
-       "8    HENRY  UNKNOWN\n",
-       "9    STEVE   PYTHON"
+       "      name subject marks\n",
+       "0     BILL    JAVA  90.0\n",
+       "1     BILL  PYTHON  95.0\n",
+       "2    STEVE    JAVA  80.0\n",
+       "3    STEVE       C  90.0\n",
+       "4  ROBERTS    HTML  98.0\n",
+       "5  ROBERTS    JAVA  60.0\n",
+       "6  ROBERTS  PYTHON  70.0\n",
+       "7    STEVE  PYTHON   nan\n",
+       "8    HENRY     nan  60.0\n",
+       "9    STEVE  PYTHON  94.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['name','subject']].applymap(convert_upper)"
+    "df[['name','subject','marks']].applymap(convert_upper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2636,7 +2657,7 @@
        "9    STEVE  PYTHON"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
